[tool.poetry]
name = "project-3"
version = "0.1.0"
description = ""
authors = ["Victor Zucchetti <victorzucchetti@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
